@@ -54,7 +54,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       representing microseconds. Setting this values causes rpp data to pause after every
       sendto for <value> microseconds. This may help with large jobs where full data does
       not arrive at sister nodes.
-
+  c - check if the file pointer to /dev/console can be opened. If not, don't attempt to write it
+      (backported from 3.0.2)
 
 2.5.5
   b - change so gpus get written back to nodes file
